Fixed profile icon link to open profile creation page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="create-listing.html">Create Listing</a></li>
                 <li><a href="show-listings.html">Show Listings</a></li>
             </ul>
-            <a href="login.html" class="profile-icon">
+            <a href="profile.html" class="profile-icon">
                 <img src="images/user.png" alt="User Profile">
             </a>
         </nav>
