--- a/index.html
+++ b/index.html
@@ -8,24 +8,9 @@
     <script defer src="scripts.js"></script>
 </head>
 <body>
-    <header>
-        <div class="logo-container">
-            <img src="images/logo.png" alt="I Can You Can Logo" class="logo">
-        </div>
-        <h1> I Can / You Can</h1>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="browse.html">Browse Skills</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="create-listing.html">Create Listing</a></li>
-                <li><a href="show-listings.html">Show Listings</a></li>
-            </ul>
-            <a href="profile.html" class="profile-icon">
-                <img src="images/user.png" alt="User Profile">
-            </a>
-        </nav>
-    </header>
+    <div id="header-container"></div>
+    <script src="header.js"></script>
+    
     
     <main>
         <section class="description">
