--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="header-container"></div>
-    <script src="header.js"></script>
+<?php include 'header.php'; ?>
+
     
     
     <main>
