--- a/create-listing.html
+++ b/create-listing.html
@@ -8,8 +8,8 @@
     <script defer src="create-listing.js"></script>
 </head>
 <body>
-    <div id="header-container"></div>
-    <script src="header.js"></script>
+<?php include 'header.php'; ?>
+
 
     <main>
         <section class="placeholder-container">
