--- a/profile.html
+++ b/profile.html
@@ -8,8 +8,8 @@
     <script defer src="profile.js"></script>
 </head>
 <body>
-    <div id="header-container"></div>
-    <script src="header.js"></script>
+<?php include 'header.php'; ?>
+
     
 
     <main>
