--- a/show-listings.html
+++ b/show-listings.html
@@ -8,8 +8,8 @@
     <script defer src="show-listings.js"></script>
 </head>
 <body>
-    <div id="header-container"></div>
-    <script src="header.js"></script>
+<?php include 'header.php'; ?>
+
 
     <main>
         <section class="placeholder-header">
